--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.9",
     "@primeng/themes": "^19.1.3",
     "express": "^4.18.2",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
